Cambiar la URL del REP

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=SimpleBox
-version=0.2.0
+version=0.2.1
 author=CIMA
-maintainer=Antonio Perez <00antonio.perez00@gmail.com>
+maintainer=Jorge León <leon.jorge@tec.mx> 
 sentence=A Simple MQTT client for connection with cloud providers
 paragraph=This library allows you to access in a simple way the IoT 4.0 services of the CIMA.
 category=Communication
-url=https://github.com/soyantonio/simple-box
+url=https://github.com/cima-qro/simple-box
 architectures=esp8266
